--- a/releng/helm-charts/dirigible/templates/dirigible.yaml
+++ b/releng/helm-charts/dirigible/templates/dirigible.yaml
@@ -8,7 +8,7 @@ spec:
   - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values.volume.storage }}
+      storage: {{ required "Missing volume storage" .Values.volume.storage }}
 {{- end }}
 
 ---
@@ -20,7 +20,7 @@ metadata:
   labels:
     {{- include "dirigible.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ required "Missing replica count" .Values.replicaCount }}
   selector:
     matchLabels:
       {{- include "dirigible.selectorLabels" . | nindent 6 }}
@@ -59,7 +59,7 @@ spec:
             - for i in {1..15}; do echo "Waiting for volume creation ..."; sleep 2; done;
         {{- end }}
       containers:
-        - name: {{ .Chart.Name }}
+        - name: {{ required "Missing chart name" .Chart.Name }}
           {{- if .Values.volume.enabled }}
           volumeMounts:
           - name: {{ include "dirigible.fullname" . }}-volume
@@ -68,7 +68,7 @@ spec:
           env:
             {{- if .Values.kyma.enabled }}
             - name: DIRIGIBLE_HOST
-              value: https://{{ .Release.Name }}.{{ .Values.kyma.apirule.host }}
+              value: https://{{ required "Missing release name" .Release.Name }}.{{ required "Missing Kyma apirule host" .Values.kyma.apirule.host }}
             {{- end }}
             {{- if .Values.database.enabled }}
             - name: DIRIGIBLE_DATABASE_PROVIDER
@@ -78,13 +78,13 @@ spec:
             - name: DIRIGIBLE_DATABASE_DATASOURCE_NAME_DEFAULT
               value: POSTGRE
             - name: POSTGRE_URL
-              value: jdbc:postgresql://{{ include "dirigible.fullname" . }}-database:5432/{{ .Values.database.username }}
+              value: jdbc:postgresql://{{ include "dirigible.fullname" . }}-database:5432/{{ required "Missing database username" .Values.database.username }}
             - name: POSTGRE_DRIVER
               value: org.postgresql.Driver
             - name: POSTGRE_USERNAME
-              value: {{ .Values.database.username }}
+              value: {{ required "Missing database username" .Values.database.username }}
             - name: POSTGRE_PASSWORD
-              value: {{ .Values.database.password }}
+              value: {{ required "Missing database password" .Values.database.password }}
             - name: DIRIGIBLE_MESSAGING_USE_DEFAULT_DATABASE
               value: "false"
             - name: DIRIGIBLE_DATABASE_NAMES_CASE_SENSITIVE
@@ -98,32 +98,32 @@ spec:
             - name: KEYCLOAK_SSL_REQUIRED
               value: "none"
             - name: KEYCLOAK_REALM
-              value: {{ .Values.keycloak.realm }}
+              value: {{ required "Missing Keycloak realm" .Values.keycloak.realm }}
             - name: KEYCLOAK_CLIENT_ID
-              value: {{ .Values.keycloak.clientId }}
+              value: {{ required "Missing Keycloak client id" .Values.keycloak.clientId }}
             {{- if .Values.ingress.enabled }}
             - name: KEYCLOAK_AUTH_SERVER_URL
-              value: http{{ if $.Values.ingress.tls }}s{{ end }}://{{ .Values.keycloak.name }}.{{ .Values.ingress.host }}/auth/
+              value: http{{ if $.Values.ingress.tls }}s{{ end }}://{{ required "Missing Keycloak name" .Values.keycloak.name }}.{{ required "Missing ingress host" .Values.ingress.host }}/auth/
             {{- else if .Values.kyma.apirule.host }}
             - name: KEYCLOAK_AUTH_SERVER_URL
-              value: https://{{ .Values.keycloak.name }}.{{ .Values.kyma.apirule.host }}/auth/
+              value: https://{{ required "Missing Keycloak name" .Values.keycloak.name }}.{{ required "Missing Kyma api rule host" .Values.kyma.apirule.host }}/auth/
             {{- else }}
             - name: KEYCLOAK_AUTH_SERVER_URL
-              value: https://{{ .Values.keycloak.name }}/auth/
+              value: https://{{ required "Missing Keycloak name" .Values.keycloak.name }}/auth/
             {{- end }}
             {{- end }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           {{- if .Values.dirigible.image }}
-          image: "{{ .Values.dirigible.image }}"
+          image: "{{ required "Missing Dirigible image" .Values.dirigible.image }}"
           {{- else if .Values.keycloak.enabled }}
-          image: "{{ .Values.image.repositoryKeycloak }}:{{ .Chart.AppVersion }}"
+          image: "{{ required "Missing Keycloak image" .Values.image.repositoryKeycloak }}:{{ required "Missing chart app version" .Chart.AppVersion }}"
           {{- else if .Values.kyma.enabled }}
-          image: "{{ .Values.image.repositoryKyma }}:{{ .Chart.AppVersion }}"
+          image: "{{ required "Missing Kyma image" .Values.image.repositoryKyma }}:{{ required "Missing chart app version" .Chart.AppVersion }}"
           {{- else }}
-          image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
+          image: "{{ required "Missing image" .Values.image.repository }}:{{ required "Missing chart app version" .Chart.AppVersion }}"
           {{- end }}
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          imagePullPolicy: {{ required "Missing image pull policy" .Values.image.pullPolicy }}
           ports:
             - name: http
               containerPort: 8080
@@ -170,9 +170,9 @@ metadata:
   labels:
     {{- include "dirigible.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ required "Missing service type" .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ required "Missing service port" .Values.service.port }}
       targetPort: http
       protocol: TCP
       name: http
@@ -201,9 +201,9 @@ spec:
     - HEAD
     path: /.*
   service:
-    host: {{ .Release.Name }}
+    host: {{ required "Missing release name" .Release.Name }}
     name: {{ include "dirigible.fullname" . }}
-    port: {{ .Values.service.port }}
+    port: {{ required "Missing service port" .Values.service.port }}
 {{- end }}
 
 ---
@@ -212,7 +212,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ required "Missing release name" .Release.Name }}
   labels:
     {{- include "dirigible.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
@@ -220,14 +220,15 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
+  ingressClassName: nginx
 {{- if .Values.ingress.tls }}
   tls:
     - hosts:
-      - {{ .Release.Name }}.{{ .Values.ingress.host }}
-      secretName: {{ .Release.Name }}-tls
+      - {{ required "Missing release name" .Release.Name }}.{{ required "Missing ingress host" .Values.ingress.host }}
+      secretName: {{ required "Missing release name" .Release.Name }}-tls
 {{- end }}
   rules:
-    - host: {{ .Release.Name }}.{{ .Values.ingress.host }}
+    - host: {{ required "Missing release name" .Release.Name }}.{{ required "Missing ingress host" .Values.ingress.host }}
       http:
         paths:
           - path: /
@@ -236,7 +237,7 @@ spec:
               service:
                 name: {{ include "dirigible.fullname" . }}
                 port:
-                  number: {{ .Values.service.port }}
+                  number: {{ required "Missing service port" .Values.service.port }}
 {{- end }}
 
 ---
@@ -251,7 +252,7 @@ spec:
   - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values.database.storage }}
+      storage: {{ required "Missing database storage" .Values.database.storage }}
 
 ---
 
@@ -273,7 +274,7 @@ spec:
     spec:
       containers:
         - name: {{ include "dirigible.fullname" . }}-database
-          image: {{ .Values.database.image }}
+          image: {{ required "Missing database image" .Values.database.image }}
           imagePullPolicy: Always
           volumeMounts:
           - name: {{ include "dirigible.fullname" . }}-database-volume
@@ -282,9 +283,9 @@ spec:
             - name: PGDATA
               value: "/var/lib/postgresql/data/pgdata"
             - name: POSTGRES_USER
-              value: {{ .Values.database.username }}
+              value: {{ required "Missing database username" .Values.database.username }}
             - name: POSTGRES_PASSWORD
-              value: {{ .Values.database.password }}
+              value: {{ required "Missing database password" .Values.database.password }}
           ports:
             - name: jdbc
               containerPort: 5432
@@ -319,15 +320,15 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: {{ .Values.istio.gatewayName }}
+  name: {{ required "Missing Istio gateway name" .Values.istio.gatewayName }}
 spec:
   selector:
     istio: ingressgateway # use Istio default gateway implementation
   servers:
   - port:
-      number: {{ .Values.istio.serversPortNumber }}
-      name: {{ .Values.istio.serversPortName }}
-      protocol: {{ .Values.istio.serversPortProtocol }}
+      number: {{ required "Missing Istio server port number" .Values.istio.serversPortNumber }}
+      name: {{ required "Missing Istio server port name" .Values.istio.serversPortName }}
+      protocol: {{ required "Missing Istio server port protocol" .Values.istio.serversPortProtocol }}
     hosts:
     - {{ .Values.istio.serversHost | quote }}
 
@@ -336,19 +337,19 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: {{ .Values.istio.virtualserviceName }}
+  name: {{ required "Missing Istio virtual service name" .Values.istio.virtualserviceName }}
 spec:
   hosts:
-  - {{ .Values.istio.virtualserviceHosts | quote }}
+  - {{ required "Missing Istio virtual service hosts" .Values.istio.virtualserviceHosts | quote }}
   gateways:
-  - {{ .Values.istio.virtualserviceGateways }}
+  - {{ required "Missing Istio virtual service gateways" .Values.istio.virtualserviceGateways }}
   http:
   - match:
     - uri:
         regex: /.*
     route:
     - destination:
-        host: {{ .Values.istio.virtualserviceDestination }}
+        host: {{ required "Missing Istio virtual service destination" .Values.istio.virtualserviceDestination }}
         port:
-          number: {{ .Values.istio.virtualservicePort }}           
+          number: {{ required "Missing Istio virtual service port" .Values.istio.virtualservicePort }}           
 {{- end }}
