--- a/modules/engines/engine-odata/pom.xml
+++ b/modules/engines/engine-odata/pom.xml
@@ -106,6 +106,12 @@
 			<version>7.0.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-core-publisher</artifactId>
+			<version>7.0.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<properties>
