--- a/modules/cms/cms-all/pom.xml
+++ b/modules/cms/cms-all/pom.xml
@@ -92,6 +92,11 @@
 			<artifactId>dirigible-ide-ui-csvim</artifactId>
 			<version>7.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-cms-csvim</artifactId>
+			<version>7.0.0-SNAPSHOT</version>
+		</dependency>
     </dependencies>
 
     <properties>
