--- a/modules/cms/pom.xml
+++ b/modules/cms/pom.xml
@@ -22,6 +22,7 @@
 		<module>api-cms</module>
 		<module>api-documents</module>
 		<module>cms-resources</module>
+		<module>cms-csvim</module>
 	</modules>
 
 	<properties>
