--- a/modules/engines/engine-odata/pom.xml
+++ b/modules/engines/engine-odata/pom.xml
@@ -109,7 +109,7 @@
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-core-publisher</artifactId>
-			<version>7.0.0-SNAPSHOT</version>
+			<version>6.1.11</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
